CheckMails - System tray unread mail checker
=============================================
Copyright 2016-2018 Juliette Monsel <j_4321@protonmail.com>

Changelog
---------

- Version 1.3.0
    * Send notifications for new emails displaying subject, sender and date

- Version 1.2.3
    * Add black border around icons for visibility on clear themes
    * Update French translations
    * Catch error when mailbox file does not exist 

- Version 1.2.2
    * Add compatibility with pycryptodome as an alternative to pycrypto
    * Show dialog in case of failed authentication

- Version 1.2.1
    * Fix ValueError in after_cancel with Python 3.6.5
    * Add compatibility with Tcl/Tk 8.5
    * Change wm_class to CheckMails (the windows will no longer be grouped together with tk windows)
    * Only display the 'No Internet connection' error once
    * Log more events (Internet connection and Suspend/Restart)

- Version 1.2.0
    * Fix font settings
    * Add support for several system tray icon gui toolkits:
      increase the number of compatible desktop environments
    * Improve style consistency

- Version 1.1.5
    * Add log file ~/.checkmails/checkmails.log
    * Fix setup.py so that install works

- Version 1.1.4
    * Corrected bug: update checker not working due to typo in html parser

- Version 1.1.3
    * Improved Preferences dialog layout
    * Added update checker
    * Set notification to "No active mailbox" instead of "Checking..."
      when there is no active mailbox.
    * Changed package organization (config, images, locale paths) so
      that the installation is neater and also it can be used as a
      portable software (if run locally, the config files are created
      inside the app folder, not in the home directory)
    * Created .deb package

- Version 1.1.2
    * Corrected bug: ImportError: No module named 'tktray'

- Version 1.1.1
    * Corrected bug when the default font (Liberation Sans Bold) is not installed